--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,9 @@
 {
     "recommendations": [
-        "ms-vscode.cpptools-extension-pack",
+        "raspberry-pi.raspberry-pi-pico",
+        "ms-vscode.vscode-serial-monitor",
         "ms-vscode.cpptools",
         "marus25.cortex-debug",
-        "ms-vscode.vscode-serial-monitor",
-        "raspberry-pi.raspberry-pi-pico"
+        "ms-vscode.cpptools-extension-pack"
     ]
 }
